--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,44 @@
+appnope==0.1.0
 astroid==2.3.3
+attrs==19.3.0
+backcall==0.1.0
 beautifulsoup4==4.8.2
+cycler==0.10.0
+decorator==4.4.1
+importlib-metadata==1.4.0
+ipython==7.11.1
+ipython-genutils==0.2.0
 isort==4.3.21
+jedi==0.15.2
+Jinja2==2.10.3
+kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+matplotlib==3.1.2
 mccabe==0.6.1
+more-itertools==8.1.0
+networkx==2.4
+networkx-viewer==0.2.0
+numpy==1.18.1
+packaging==20.0
+parso==0.5.2
+pexpect==4.7.0
+pickleshare==0.7.5
+pluggy==0.13.1
+prompt-toolkit==3.0.2
+ptyprocess==0.6.0
+py==1.8.1
+Pygments==2.5.2
+pygraphviz==1.5
 pylint==2.4.4
+pyparsing==2.4.6
+pytest==5.3.3
+python-dateutil==2.8.1
+pyvis==0.1.7.0
 six==1.14.0
 soupsieve==1.9.5
+traitlets==4.3.3
 typed-ast==1.4.1
+wcwidth==0.1.8
 wrapt==1.11.2
+zipp==2.0.0
