--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ python-dateutil==2.8.1
 pyvis==0.1.7.0
 six==1.14.0
 soupsieve==1.9.5
+termcolor==1.1.0
 traitlets==4.3.3
 typed-ast==1.4.1
 wcwidth==0.1.8
