gitignore file updated v2

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ startbootstrap-clean-blog-master/
 startbootstrap-sb-admin-2-master/
 vue-material-training_v2/
 boot4_official_examples/
+material-design-components/
